--- a/Client/index.html
+++ b/Client/index.html
@@ -13,9 +13,9 @@
         <table id="table" class="users-table">
             <thead>
                 <tr>
-                    <th>Аватар</th>
-                    <th>Име</th>
-                    <th>Имейл</th>
+                    <th>Avatar</th>
+                    <th>Name</th>
+                    <th>Email</th>
                     <th><button class="add-btn" id="add-btn">Add</button></th>
             </thead>
             <tbody> <!-- Примерен статичен ред -->
@@ -25,10 +25,10 @@
                     <td> <p></p></td>
                     <td> <input type="text" id="new-name" placeholder="Име" /> </td>
                     <td> <input type="email" id="new-email" placeholder="Имейл" /> </td>
-                    <td> <button id="add-user-btn">Добави</button> </td>
+                    <td> <button id="add-user-btn">Add</button> </td>
                 </tr>
         </table>
-        <button id="loadBtn">Load users</button>
+        <button id="loadBtn" >Load users</button>
     </main>
 
     <script src="index.js"></script>
