To render avatar component correctly in table

--- a/Client/index.html
+++ b/Client/index.html
@@ -18,7 +18,7 @@
                     <th>Email</th>
                     <th><button class="add-btn" id="add-btn">Add</button></th>
             </thead>
-            <tbody> <!-- Примерен статичен ред -->
+            <tbody> 
                 
             </tbody>
             <tr id="add-user-row" class="add-user-row">
